@@ -140,21 +140,21 @@ public abstract class RungeKuttaIntegrator
       throw new IntegratorException("dimensions mismatch: ODE problem has dimension {0}," +
                                     " initial state vector has dimension {1}",
                                     new Object[] {
-                                      new Integer(equations.getDimension()),
-                                      new Integer(y0.length)
+                                      Integer.valueOf(equations.getDimension()),
+                                      Integer.valueOf(y0.length)
                                     });
     }
     if (equations.getDimension() != y.length) {
         throw new IntegratorException("dimensions mismatch: ODE problem has dimension {0}," +
                                       " final state vector has dimension {1}",
                                       new Object[] {
-                                        new Integer(equations.getDimension()),
-                                        new Integer(y.length)
+                                        Integer.valueOf(equations.getDimension()),
+                                        Integer.valueOf(y.length)
                                       });
       }
     if (Math.abs(t - t0) <= 1.0e-12 * Math.max(Math.abs(t0), Math.abs(t))) {
       throw new IntegratorException("too small integration interval: length = {0}",
-                                    new Object[] { new Double(Math.abs(t - t0)) });
+                                    new Object[] { Double.valueOf(Math.abs(t - t0)) });
     }      
   }
 
