@@ -21,7 +21,7 @@ package org.apache.commons.math.util;
  * @version $Revision$ $Date$
  */
 public class TestBean {
-    private Double x = new Double(1.0);
+    private Double x = Double.valueOf(1.0);
 
     private String y = "1.0";
 
